2009-08-29  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2009-08-26  H.J. Lu  <hongjiu.lu@intel.com>

	PR fortran/41162
	* gfortran.dg/pr41162.f: New.

	2009-08-26  Richard Guenther  <rguenther@suse.de>

	PR middle-end/41163
	* gcc.c-torture/compile/pr41163.c: New testcase.

	2009-08-25  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/41139
	* gfortran.dg/proc_ptr_25.f90: New.
	* gfortran.dg/proc_ptr_comp_18.f90: New.
	* gfortran.dg/proc_ptr_comp_19.f90: New.

	2009-08-20  Michael Matz  <matz@suse.de>

	PR fortran/41126
	* gfortran.dg/pr41126.f90: New test.

	2009-08-20  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/41121
	* gfortran.dg/intrinsic_5.f90: New.

	2009-08-19  Jason Merrill  <jason@redhat.com>

	PR c++/41120
	* g++.dg/other/gc4.C: New.

2009-08-28  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2009-08-25  Uros Bizjak  <ubizjak@gmail.com>

	* gcc.c-torture/compile/limits-fndefn.c: Add dg-timeout-factor.

	2009-08-18  Uros Bizjak  <ubizjak@gmail.com>

	* g++.dg/cdce3.C: Add -mieee for alpha*-*-* targets.

	2009-08-17  Uros Bizjak  <ubizjak@gmail.com>

	* lib/target-supports.exp
	(check_effective_target_vect_cmdline_needed): Add alpha to the list
	of targets that do not need command line argument to enable SIMD.

2008-08-25  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/41062
	* gfortran.dg/use_only_4.f90: New test.

2009-08-24  Richard Guenther  <rguenther@suse.de>

	PR middle-end/41094
	* gcc.dg/torture/pr41094.c: New testcase.
	* gcc.dg/torture/builtin-power-1.c: Adjust.
	* gcc.dg/builtins-10.c: Likewise.

2009-08-23  Uros Bizjak  <ubizjak@gmail.com>

	PR target/40718
	* gcc.target/i386/pr40718.c: New test.

2009-08-21  Jakub Jelinek  <jakub@redhat.com>

	PR c++/41131
	* g++.dg/expr/unary3.C: New test.

2009-08-20  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR libfortran/40962
	* c_f_pointer_tests_4.f90:  New test.

2009-08-19  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/41123
	* gcc.dg/pr41123.c: New test.
